--- a/src/main/resources/static/css/product.css
+++ b/src/main/resources/static/css/product.css
@@ -2635,6 +2635,25 @@
 }
 
 .order__item {
-  height: 120px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid rgb(177, 177, 177);
+}
+
+.order__left-layout {
+}
+
+.order__right-layout {
+}
+
+.complete__nav {
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 2px solid black;
+  padding: 8px 4px;
+  margin-bottom: 12px;
+}
+
+.complete__message {
+  text-align: center;
+  margin-bottom: 12px;
 }
