--- a/src/main/resources/templates/product/order.html
+++ b/src/main/resources/templates/product/order.html
@@ -10,8 +10,21 @@
 
   <form id="buyForm" action="#">
     <!-- 주문 상품 목록 -->
-    <table style="width: 100%">
-      <tr style="width: 100%; border-bottom: 1px solid black">
+    <table
+      style="
+        width: 100%;
+        border-collapse: collapse;
+        border-top: 2px solid black;
+        margin-bottom: 8px;
+      "
+    >
+      <tr
+        style="
+          width: 100%;
+          border-bottom: 1px solid rgb(182, 182, 182);
+          height: 40px;
+        "
+      >
         <th style="width: 30px"><input type="checkbox" /></th>
         <th style="flex: 1">상품명</th>
         <th style="width: 60px">수량</th>
@@ -23,9 +36,13 @@
       </tr>
       <tr class="order__item">
         <td>12</td>
-        <td>
+        <td style="padding: 12px 0">
           <div style="display: flex; gap: 12px; align-items: center">
-            <img alt="img" />
+            <img
+              src="https://thumbnail9.coupangcdn.com/thumbnails/remote/48x48ex/image/rs_quotation_api/cdaevhic/bcb1b4db87db478387ac5a1222e22bb1.jpg"
+              alt="img"
+              height="100%"
+            />
             <div style="padding: 12px">
               <div>상품명</div>
               <div>상품설명</div>
@@ -41,215 +58,268 @@
       </tr>
     </table>
 
-    <!-- 최종 결제 정보 -->
-    <div class="final">
-      <h2>최종결제 정보</h2>
-      <table border="0">
-        <tr>
-          <td>총</td>
-          <td id="prodCount">2 건</td>
-        </tr>
-        <tr>
-          <td>상품금액</td>
-          <td id="prodCost">0</td>
-        </tr>
-        <tr>
-          <td>할인금액</td>
-          <td id="prodDis">0</td>
-        </tr>
-        <tr>
-          <td>배송비</td>
-          <td id="prodFee">0</td>
-        </tr>
-        <tr>
-          <td>포인트 할인</td>
-          <td id="prodPoint">0</td>
-        </tr>
-        <tr>
-          <td>전체주문금액</td>
-          <td id="prodAll" name="orderPrice">0</td>
-        </tr>
-      </table>
-      <input type="button" id="btnOrder" value="결제하기" />
-    </div>
+    <div style="display: flex; padding: 8px; gap: 40px">
+      <section style="flex: 1">
+        <!-- 배송정보 -->
+        <article class="delivery" style="margin-bottom: 36px">
+          <h1
+            style="
+              font-size: 18px;
+              border-bottom: 1px solid #acacac;
+              padding-bottom: 4px;
+              margin-bottom: 12px;
+            "
+          >
+            배송정보
+          </h1>
+          <table style="padding-left: 16px; width: 100%">
+            <tr>
+              <td style="width: 80px">수령자</td>
+              <td>
+                <input
+                  type="text"
+                  class="deliveryInfo"
+                  name="orderReceiver"
+                  id="userOrder"
+                  onfocus="removeValue(event)"
+                  th:value="${user.userName}"
+                />
+              </td>
+              <td>
+                <input
+                  type="hidden"
+                  class="deliveryInfo"
+                  name="userId"
+                  id="userId"
+                  onfocus="removeValue(event)"
+                  th:value="${user.userId}"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td>휴대폰</td>
+              <td>
+                <input
+                  type="text"
+                  class="deliveryInfo"
+                  name="orderHp"
+                  id="userHp"
+                  onfocus="removeValue(event)"
+                  th:value="${user.userHp}"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td>우편번호</td>
+              <td>
+                <input
+                  type="text"
+                  name="orderAddr"
+                  id="userZip"
+                  th:value="${user.userZip}"
+                />
+                <input type="button" id="btnZip" value="검색" />
+              </td>
+            </tr>
+            <tr>
+              <td>기본주소</td>
+              <td>
+                <input
+                  type="text"
+                  name="orderAddr"
+                  id="userAddr1"
+                  th:value="${user.userAddr1}"
+                  style="width: 90%"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td>상세주소</td>
+              <td>
+                <input
+                  type="text"
+                  name="orderAddr"
+                  id="userAddr2"
+                  th:value="${user.userAddr2}"
+                  style="width: 90%"
+                />
+              </td>
+            </tr>
+          </table>
+        </article>
 
-    <!-- 배송정보 -->
-    <article class="delivery">
-      <h1>배송정보</h1>
-      <table>
-        <tr>
-          <td>주문자</td>
-          <td>
-            <input
-              type="text"
-              class="deliveryInfo"
-              name="orderReceiver"
-              id="userOrder"
-              onfocus="removeValue(event)"
-              th:value="${user.userName}"
-            />
-          </td>
-          <td>
-            <input
-              type="hidden"
-              class="deliveryInfo"
-              name="userId"
-              id="userId"
-              onfocus="removeValue(event)"
-              th:value="${user.userId}"
-            />
-          </td>
-        </tr>
-        <tr>
-          <td>휴대폰</td>
-          <td>
-            <input
-              type="text"
-              class="deliveryInfo"
-              name="orderHp"
-              id="userHp"
-              onfocus="removeValue(event)"
-              th:value="${user.userHp}"
-            />
-            <span>- 포함 입력</span>
-          </td>
-        </tr>
-        <tr>
-          <td>우편번호</td>
-          <td>
-            <input
-              type="text"
-              name="orderAddr"
-              id="userZip"
-              th:value="${user.userZip}"
-            />
-            <input type="button" id="btnZip" value="검색" />
-          </td>
-        </tr>
-        <tr>
-          <td>기본주소</td>
-          <td>
-            <input
-              type="text"
-              name="orderAddr"
-              id="userAddr1"
-              th:value="${user.userAddr1}"
-            />
-          </td>
-        </tr>
-        <tr>
-          <td>상세주소</td>
-          <td>
-            <input
-              type="text"
-              name="orderAddr"
-              id="userAddr2"
-              th:value="${user.userAddr2}"
-            />
-          </td>
-        </tr>
-        <tr>
-          <td>배송 메세지</td>
-          <td>
-            <input type="text" name="orderMemo" id="orderMemo" />
-          </td>
-        </tr>
-      </table>
-    </article>
+        <!-- 할인정보 -->
+        <article class="discount" style="margin-bottom: 36px">
+          <h1
+            style="
+              font-size: 18px;
+              border-bottom: 1px solid #acacac;
+              padding-bottom: 4px;
+              margin-bottom: 12px;
+            "
+          >
+            할인정보
+          </h1>
 
-    <!-- 할인정보 -->
-    <article class="discount">
-      <h1>할인정보</h1>
+          <div style="padding-left: 16px">
+            <div
+              style="
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+              "
+            >
+              <p>
+                현재 포인트 :
+                <span id="userPoint">7200</span>점
+              </p>
+              <label>
+                <input
+                  type="text"
+                  name="userUsedPoint"
+                  id="inputPoint"
+                  oninput="validateNumber(this)"
+                  style="width: 100px"
+                />
+                <input type="button" value="사용하기" id="btnPoint" />
+              </label>
+            </div>
+            <span style="font-size: 14px; color: #acacac">
+              포인트 5,000점 이상이면 <br />
+              현금처럼 사용 가능.</span
+            >
+          </div>
+        </article>
 
+        <!-- 결제방법 -->
+        <article class="payment">
+          <h1
+            style="
+              font-size: 18px;
+              border-bottom: 1px solid #acacac;
+              padding-bottom: 4px;
+              margin-bottom: 12px;
+            "
+          >
+            결제방법
+          </h1>
+          <div style="padding-left: 16px">
+            <div>
+              <p>
+                <label style="margin-right: 20px"
+                  ><input type="radio" name="orderPay" value="type1" />신용카드
+                </label>
+                <label
+                  ><input type="radio" name="orderPay" value="type2" />체크카드
+                </label>
+              </p>
+            </div>
+            <div>
+              <p>
+                <label style="margin-right: 20px"
+                  ><input
+                    type="radio"
+                    name="orderPay"
+                    value="type3"
+                  />계좌이체</label
+                >
+                <label
+                  ><input type="radio" name="orderPay" value="type4" />무통장
+                  입금</label
+                >
+              </p>
+            </div>
+            <div>
+              <p>
+                <label style="margin-right: 20px"
+                  ><input
+                    type="radio"
+                    name="orderPay"
+                    value="type5"
+                  />휴대폰결제</label
+                >
+                <label>
+                  <input type="radio" name="orderPay" value="type6" />카카오페이
+                  <img src="../images/ico_kakaopay.gif" alt="카카오페이" />
+                </label>
+              </p>
+            </div>
+          </div>
+        </article>
+      </section>
+
+      <!-- 최종 결제 정보 -->
       <div>
-        <p>
-          현재 포인트 : <span id="userPoint">[[${user.pointBalance}]]</span>점
-        </p>
-        <label>
+        <div
+          class="final"
+          style="
+            width: 300px;
+            border: 2px solid rgb(189, 189, 189);
+            padding: 12px;
+          "
+        >
+          <h2
+            style="
+              border-bottom: 2px solid #acacac;
+              padding: 4px;
+              font-size: 18px;
+              margin-bottom: 12px;
+            "
+          >
+            최종결제 정보
+          </h2>
+          <table border="0" style="width: 100%">
+            <tr>
+              <td>상품수</td>
+              <td id="prodCount" style="text-align: end">1</td>
+            </tr>
+            <tr>
+              <td>상품금액</td>
+              <td id="prodCost" style="text-align: end">27,000</td>
+            </tr>
+            <tr>
+              <td>할인금액</td>
+              <td id="prodDis" style="text-align: end">-1,350</td>
+            </tr>
+            <tr>
+              <td>배송비</td>
+              <td id="prodFee" style="text-align: end">0</td>
+            </tr>
+            <tr>
+              <td>포인트 할인</td>
+              <td id="prodPoint" style="text-align: end">-1,000</td>
+            </tr>
+            <tr>
+              <td>전체주문금액</td>
+              <td id="prodAll" name="orderPrice" style="text-align: end">
+                24,650
+              </td>
+            </tr>
+            <tr>
+              <td>적립 포인트</td>
+              <td id="prodAll" name="orderPrice" style="text-align: end">
+                270
+              </td>
+            </tr>
+          </table>
           <input
-            type="text"
-            name="userUsedPoint"
-            id="inputPoint"
-            oninput="validateNumber(this)"
-          />점
-          <input type="button" value="적용" id="btnPoint" />
-        </label>
-        <span>포인트 5,000점 이상이면 현금처럼 사용 가능합니다.</span>
+            type="button"
+            id="btnOrder"
+            value="결제하기"
+            style="
+              width: 200px;
+              height: 40px;
+              display: block;
+              margin: 16px auto;
+              background-color: rgb(192, 0, 0);
+              border: none;
+              color: white;
+              font-size: 18px;
+            "
+          />
+        </div>
       </div>
-    </article>
-
-    <!-- 결제방법 -->
-    <article class="payment">
-      <h1>결제방법</h1>
-      <div>
-        <span>신용카드</span>
-        <p>
-          <label
-            ><input type="radio" name="orderPay" value="type1" />신용카드
-            결제</label
-          >
-          <label
-            ><input type="radio" name="orderPay" value="type2" />체크카드
-            결제</label
-          >
-        </p>
-      </div>
-      <div>
-        <span>계좌이체</span>
-        <p>
-          <label
-            ><input type="radio" name="orderPay" value="type3" />실시간
-            계좌이체</label
-          >
-          <label
-            ><input type="radio" name="orderPay" value="type4" />무통장
-            입금</label
-          >
-        </p>
-      </div>
-      <div>
-        <span>기타</span>
-        <p>
-          <label
-            ><input
-              type="radio"
-              name="orderPay"
-              value="type5"
-            />휴대폰결제</label
-          >
-          <label>
-            <input type="radio" name="orderPay" value="type6" />카카오페이
-            <img src="../images/ico_kakaopay.gif" alt="카카오페이" />
-          </label>
-        </p>
-      </div>
-    </article>
-
-    <!-- 경고 -->
-    <article class="alert">
-      <ul>
-        <li>
-          <span
-            >롯데ON의 모든 판매자는 안전거래를 위해 구매금액, 결제수단에
-            상관없이 모든거래에 대하여 롯데ON 유한책임회사의
-            구매안전서비스(에스크로)를 제공하고 있습니다.</span
-          >
-        </li>
-        <li>
-          <span
-            >롯데ON 유한책임회사의 전자금융거래법에 의해 결제대금예치업
-            등록번호는 02-006-00008 입니다.</span
-          >
-        </li>
-        <li>
-          <span
-            >등록여부는 금융감독원 홈페이지(www.fss.or.kr)의
-            업무자료>인허가업무안내>전자금융업등록현황에서 확인하실수
-            있습니다.</span
-          >
-        </li>
-      </ul>
-    </article>
+    </div>
   </form>
 </section>
 <!-- 주문 페이지 끝-->
