myinfo and adminpage and modal

--- a/src/main/resources/static/css/my/modal.css
+++ b/src/main/resources/static/css/my/modal.css
@@ -12,6 +12,10 @@
 }
 
 /* 모달별 컨텐츠 스타일 */
+.userchangemodal-content,
+.sellerinsertmodal-content,
+.versioninsertmodal-content,
+.VersionCheckmodal-content,
 .Bannermodal-content,
 .ordermodal-content, 
 .sellermodal-content, 
@@ -31,6 +35,8 @@
 }
 
 /* 판매자,문의,리뷰 모달 추가 */
+.versioninsertmodal-content,
+.VersionCheckmodal-content,
 .Bannermodal-content,
 .sellermodal-content,
 .inquirymodal-content,
@@ -45,6 +51,15 @@
     width: 410px;
 }
 
+
+.sellerinsertmodal-content{
+    height: 750px;
+    width: 700px;
+}
+.userchangemodal-content{
+    height: 850px;
+    width: 700px;
+}
 /* 내부 모달 패딩 */
 .modal-section {padding: 15px 22.5px 20px 22.5px;}
 
@@ -59,14 +74,34 @@
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
-
+.adminmodal-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /* 수직 가운데 정렬 */
+    border-bottom: 1px solid #ccc;
+    padding: 10px 22.5px;
+    background-color: #34495e;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
 .modal-nav h1 {
+    color: white;
+    margin: 0;
+    font-size: 24px;
+}
+.adminmodal-nav h1 {
     color: white;
     margin: 0;
     font-size: 24px;
 }
 
 .modal-nav button {
+    background-color: transparent;
+    border: none;
+    font-size: 30px;
+    cursor: pointer;
+}
+.adminmodal-nav button {
     background-color: transparent;
     border: none;
     font-size: 30px;
@@ -80,7 +115,12 @@
     font-weight: bold;
     cursor: pointer;
 }
-
+.adminmodal-close {
+    color: white;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
 .modal-close:hover, .modal-close:focus {
     color: #aaa;
     text-decoration: none;
@@ -110,6 +150,7 @@
 }
 
 .heighttable td {
+    
     padding-left: 15px;
 }
 
@@ -152,7 +193,14 @@
     color: white;
     cursor: pointer;
 }
-
+.adminmodalbutton {
+    background-color: #34495e;
+    border: 0;
+    width: 133px;
+    height: 40px;
+    color: white;
+    cursor: pointer;
+}
 .modalcanclebutton {
     background-color: #BFBFBF;
     border: 0;
@@ -168,6 +216,16 @@
     width: 98%;
     resize: none;
     height: 210px;
+    border: 0.4px solid #34495e; /* 테두리 색상 */
+    border-radius: 5px; /* 둥근 모서리로 부드러운 느낌 */
+}
+.modalcontent2 textarea {
+    margin-top: 5px;
+    width: 98%;
+    resize: none;
+    height: 105px;
+    border: 0.4px solid #34495e; /* 테두리 색상 */
+    border-radius: 5px; /* 둥근 모서리로 부드러운 느낌 */
 }
 
 .sellermodal-content p, 
@@ -182,3 +240,48 @@
 }
 
 .modalstar.filled {color: gold;}
+.modal input[type="text"], 
+.modal input[type="date"],
+.modal input[type="password"], 
+.modal select
+ {
+    height: 30px;
+    line-height: 30px;
+    padding: 0 10px;
+    box-sizing: border-box;
+    border: 0.4px solid #34495e; /* 테두리 색상 */
+    border-radius: 5px; /* 둥근 모서리로 부드러운 느낌 */
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
+
+.modal select {
+    height: 30px;
+}
+/* 포커스 시 스타일 */
+.admin input[type="text"]:focus, 
+.admin input[type="date"]:focus,
+.admin input[type="password"]:focus,
+.admin select:focus,
+.admin textarea:focus{
+    outline: none; /* 기본 아웃라인 제거 */
+    border-color: #2980b9; /* 포커스 시 테두리 색상 변경 */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 포커스 시 더 강조된 그림자 */
+    background-color: #ffffff; /* 선택 시 배경색 강조 */
+    
+}
+.user input[type="text"]:focus, 
+.user input[type="date"]:focus, 
+.user select:focus,
+.user textarea:focus{
+    outline: none; /* 기본 아웃라인 제거 */
+    border-color: gray; /* 포커스 시 테두리 색상 변경 */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 포커스 시 그림자 강조 */
+    background-color: #ffffff; /* 포커스 시 배경 강조 */
+}
+#address1,
+#address2 {
+    width: 335px; /* 원하는 비율로 설정 (여기서는 100%로 설정해 부모의 전체 너비를 사용) */
+    box-sizing: border-box; /* padding이 너비에 포함되도록 설정 */
+    
+}
