--- a/src/main/resources/templates/admin/member/list.html
+++ b/src/main/resources/templates/admin/member/list.html
@@ -5,36 +5,6 @@
     <meta charset="UTF-8">
     <title>롯데on 관리자 회원목록</title>
     <link rel="stylesheet" href="/static/css/admin/list.css">
-
-    <style>
-        /* 배너관리 */
-        .bannerinsertbtn {
-            background-color: #F2F2F2;
-            height: 50px;
-            flex-direction: column;
-        }
-
-        .bannerinsertbtn button {
-            float: left;
-            background-color: #BFBFBF;
-            height: 40px;
-            border: none;
-            cursor: pointer;
-            margin-top: 5px;
-            margin-bottom: 10px;
-            border: 1px solid #BFBFBF;
-            margin-left: 5px;
-        }
-
-        .bannerinsertbtn button:last-child {
-            margin-right: 0;
-            /* 마지막 버튼은 오른쪽 간격 없음 */
-        }
-
-        .bannerinsertbtn .on {
-            background-color: white;
-        }
-    </style>
 </head>
 
 <!--내용 시작-->
@@ -104,93 +74,81 @@
                     </li>
                 </ul>
             </aside>
+
+            <!-- 컨텐츠 시작 -->
             <div class="content">
 
                 <div class="dashboard">
                     <div class="content_header">
-                        <h1>배너관리</h1>
+                        <h1>회원목록</h1>
                         <p>
-                            HOME > 환경설정 > <strong>배너관리</strong>
+                            HOME > 회원관리 > <strong>회원목록</strong>
                         </p>
-                    </div>
-                    
-
-                    <div class="bannerinsertbtn">
-                        <button class="on">메인 상단 베너</button>
-                        <button>메인 슬라이더 배너</button>
-                        <button>상품 상세보기 배너</button>
-                        <button>회원로그인 배너</button>
-                        <button>마이페이지 배너</button>
                     </div>
 
                     <section class="sectionBox">
                         <div>
-                            <h3>메인 상단배너</h3>
+                            <form action="/admin/member/list">
+                                <select name="type">
+                                    <option value="uid">아이디</option>
+                                    <option value="name">이름</option>
+                                    <option value="email">이메일</option>
+                                    <option value="contact">휴대폰 키워드</option>
+
+                                </select>
+                                <input class="searchInput" type="text" name="keyword">
+                                <input type="hidden" name="prodSeller" value="ADMIN" readonly>
+                                <input class="searchBtn" type="submit" value="검색">
+                            </form>
                         </div>
-                    
                         <table class="admingraph">
                             <tr class="admin_title" style="height: 50px; border-bottom: 1px solid #A6A6A6;">
                                 <th><input type="checkbox" name="allCheck" /></th>
                                 <th>번호</th>
-                                <th>이미지</th>
-                                <th>배너정보</th>
-                                <th>배너위치</th>
-                                <th>시작일</th>
-                                <th>종료일</th>
-                                <th>시작시간</th>
-                                <th>종료시간</th>
+                                <th>아이디</th>
+                                <th>이름</th>
+                                <th>성별</th>
+                                <th>등급</th>
+                                <th>포인트</th>
+                                <th>이메일</th>
+                                <th>휴대폰</th>
+                                <th>가입일</th>
+                                <th>상태</th>
                                 <th>관리</th>
                             </tr>
 
-                            <tr class="admin_config-banner">
-                                <td ><input type="checkbox" name="상품코드" /></td>
-                                <td>1</td>
-                                <td><img src="/static/images/admin/sample_thumb.jpg" class="thumb"
-                                    style="width: 70px; height: 70px;"></td>
-                                <td style="text-align: left;">
-                                    <p>배너명</p>
-                                    <p>크기 : 1200 x 80</p>
-                                    <p>배경색 : #FFFFF</p>
-                                    <p>배너링크</p>
-                                </td>
-                                <td>MAIN1</td>
-                                <td>2024/10/16</td>
-                                <td>2024/10/18</td>
-                                <td>13:00</td>
-                                <td>15:00</td>
+                            <tr class="admin_member-list" style="height: 50px; ">
+                                <td><input type="checkbox" value="noticeNo" name="RowCheck" /></td>
+                                <td>5</td>
+                                <td>xxxxx</td>
+                                <td>이상훈</td>
+                                <td>M</td>
                                 <td>
-                                    <a href="">[활성]</a>
-                                    <br>
-                                    <a href="">[비활성]</a>
+                                <select>
+                                    <option value="vvip">VVIP</option>
+                                    <option value="vip">VIP</option>
+                                    <option value="gold">GOLD</option>
+                                    <option value="silver">SILVER</option>
+                                    <option value="family">FAMILY</option>
+                                </select>
                                 </td>
-                            </tr>
-                            <tr class="admin_config-banner">
-                                <td ><input type="checkbox" name="상품코드" /></td>
-                                <td>1</td>
-                                <td><img src="/static/images/admin/sample_thumb.jpg" class="thumb"
-                                    style="width: 70px; height: 70px;"></td>
-                                <td style="text-align: left;">
-                                    <p>배너명</p>
-                                    <p>크기 : 1200 x 80</p>
-                                    <p>배경색 : #FFFFF</p>
-                                    <p>배너링크</p>
-                                </td>
-                                <td>MAIN1</td>
-                                <td>2024/10/16</td>
-                                <td>2024/10/18</td>
-                                <td>13:00</td>
-                                <td>15:00</td>
+                                <td>15,000</td>
+                                <td>xxxx@gmail.com</td>
+                                <td>010-1234-1001</td>
+                                <td>0000-00-00</td>
+                                <td>정상</td>
+                                <!-- 정상, 중지, 휴면, 탈퇴 -->
                                 <td>
-                                    <a href="">[활성]</a>
-                                    <br>
-                                    <a href="">[비활성]</a>
+                                    <a href="">[수정]</a>
+                                    <a href="">[중지]</a>
+                                    <!-- <a href="">[휴면]</a>
+                                    <a href="">[재개]</a>
+                                    <a href="">[비활성]</a> -->
                                 </td>
                             </tr>
 
                         </table>
-                        <a class="delete_btn">선택삭제</a>
-                        <a class="registration_btn">배너등록</a>
-
+                        <a class="delete_btn">선택수정</a>
 
                         <div class="pagingBox">
                             <div class="pagingList">
@@ -213,3 +171,47 @@
                 </div>
             </div>
         </main>
+        <!-- 상품목록 컨텐츠 끝 -->
+    </section>
+
+    <!--내용 끝-->
+    <div class="footer_wrapper" th:fragment="footer">
+        <footer>
+            <div id="version">LotteON ADMINISTRATOR Version 0.0.1</div>
+            <div id="copyright">
+                Copyrightⓒ LotteOn_Team1 All rights reserved.
+            </div>
+        </footer>
+    </div>
+
+</body>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const sidebar = document.querySelectorAll('#admin_sidebar > li > a');
+        sidebar.forEach(link => {
+            const subMenu = link.nextElementSibling;
+
+            // 마우스가 들어왔을 때(submenu 열기)
+            link.addEventListener('mouseenter', function () {
+                subMenu.style.display = 'block';
+            });
+
+            // 마우스가 나갔을 때(submenu 닫기)
+            link.addEventListener('mouseleave', function () {
+                subMenu.style.display = 'none';
+            });
+
+            // 서브 메뉴 자체에 대해서도 마우스가 나갔을 때 닫히지 않도록 처리
+            subMenu.addEventListener('mouseenter', function () {
+                subMenu.style.display = 'block'; // 유지
+            });
+
+            subMenu.addEventListener('mouseleave', function () {
+                subMenu.style.display = 'none';  // 메뉴 닫기
+            });
+        });
+    });
+</script>
+
+</html>
