--- a/src/main/resources/templates/admin/shop/list.html
+++ b/src/main/resources/templates/admin/shop/list.html
@@ -3,38 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>롯데on 관리자 회원목록</title>
+    <title>롯데on 관리자 상점목록</title>
     <link rel="stylesheet" href="/static/css/admin/list.css">
-
-    <style>
-        /* 배너관리 */
-        .bannerinsertbtn {
-            background-color: #F2F2F2;
-            height: 50px;
-            flex-direction: column;
-        }
-
-        .bannerinsertbtn button {
-            float: left;
-            background-color: #BFBFBF;
-            height: 40px;
-            border: none;
-            cursor: pointer;
-            margin-top: 5px;
-            margin-bottom: 10px;
-            border: 1px solid #BFBFBF;
-            margin-left: 5px;
-        }
-
-        .bannerinsertbtn button:last-child {
-            margin-right: 0;
-            /* 마지막 버튼은 오른쪽 간격 없음 */
-        }
-
-        .bannerinsertbtn .on {
-            background-color: white;
-        }
-    </style>
 </head>
 
 <!--내용 시작-->
@@ -104,93 +74,69 @@
                     </li>
                 </ul>
             </aside>
+
+            <!-- 컨텐츠 시작 -->
             <div class="content">
 
                 <div class="dashboard">
                     <div class="content_header">
-                        <h1>배너관리</h1>
+                        <h1>상점목록</h1>
                         <p>
-                            HOME > 환경설정 > <strong>배너관리</strong>
+                            HOME > 상점관리 > <strong>상점목록</strong>
                         </p>
-                    </div>
-                    
-
-                    <div class="bannerinsertbtn">
-                        <button class="on">메인 상단 베너</button>
-                        <button>메인 슬라이더 배너</button>
-                        <button>상품 상세보기 배너</button>
-                        <button>회원로그인 배너</button>
-                        <button>마이페이지 배너</button>
                     </div>
 
                     <section class="sectionBox">
                         <div>
-                            <h3>메인 상단배너</h3>
+                            <form action="/admin/shop/list">
+                                <select name="type">
+                                    <option value="companyName">상호명</option>
+                                    <option value="representative">대표자</option>
+                                    <option value="businessNumber">사업자등록번호</option>
+                                    <option value="contact">연락처</option>
+                                    <option value="keyword">키워드</option>
+
+                                </select>
+                                <input class="searchInput" type="text" name="keyword">
+                                <input type="hidden" name="prodSeller" value="ADMIN" readonly>
+                                <input class="searchBtn" type="submit" value="검색">
+                            </form>
                         </div>
-                    
+                        <div class="operate">
+                            <tr>● 운영중</tr>
+                            <tr>● 운영 중지</tr>
+                            <tr>● 운영 준비</tr>
+                        </div>
                         <table class="admingraph">
                             <tr class="admin_title" style="height: 50px; border-bottom: 1px solid #A6A6A6;">
                                 <th><input type="checkbox" name="allCheck" /></th>
                                 <th>번호</th>
-                                <th>이미지</th>
-                                <th>배너정보</th>
-                                <th>배너위치</th>
-                                <th>시작일</th>
-                                <th>종료일</th>
-                                <th>시작시간</th>
-                                <th>종료시간</th>
+                                <th>상호명</th>
+                                <th>대표</th>
+                                <th>사업자등록번호</th>
+                                <th>통신판매업번호</th>
+                                <th>연락처</th>
+                                <th>운영</th>
                                 <th>관리</th>
                             </tr>
 
-                            <tr class="admin_config-banner">
-                                <td ><input type="checkbox" name="상품코드" /></td>
+                            <tr class="admin_version-list" style="height: 50px; ">
+                                <td><input type="checkbox" value="noticeNo" name="RowCheck" /></td>
                                 <td>1</td>
-                                <td><img src="/static/images/admin/sample_thumb.jpg" class="thumb"
-                                    style="width: 70px; height: 70px;"></td>
-                                <td style="text-align: left;">
-                                    <p>배너명</p>
-                                    <p>크기 : 1200 x 80</p>
-                                    <p>배경색 : #FFFFF</p>
-                                    <p>배너링크</p>
-                                </td>
-                                <td>MAIN1</td>
-                                <td>2024/10/16</td>
-                                <td>2024/10/18</td>
-                                <td>13:00</td>
-                                <td>15:00</td>
+                                <td>(주)합천</td>
+                                <td>이상훈</td>
+                                <td>112-12-12345</td>
+                                <td>2024-서울강남-04433</td>
+                                <td>010-1234-1001-</td>
+                                <td>●</td>
                                 <td>
-                                    <a href="">[활성]</a>
-                                    <br>
-                                    <a href="">[비활성]</a>
-                                </td>
-                            </tr>
-                            <tr class="admin_config-banner">
-                                <td ><input type="checkbox" name="상품코드" /></td>
-                                <td>1</td>
-                                <td><img src="/static/images/admin/sample_thumb.jpg" class="thumb"
-                                    style="width: 70px; height: 70px;"></td>
-                                <td style="text-align: left;">
-                                    <p>배너명</p>
-                                    <p>크기 : 1200 x 80</p>
-                                    <p>배경색 : #FFFFF</p>
-                                    <p>배너링크</p>
-                                </td>
-                                <td>MAIN1</td>
-                                <td>2024/10/16</td>
-                                <td>2024/10/18</td>
-                                <td>13:00</td>
-                                <td>15:00</td>
-                                <td>
-                                    <a href="">[활성]</a>
-                                    <br>
-                                    <a href="">[비활성]</a>
+                                    <a href="">[중단]</a>
                                 </td>
                             </tr>
 
                         </table>
                         <a class="delete_btn">선택삭제</a>
-                        <a class="registration_btn">배너등록</a>
-
+                        <a class="registration_btn">상점등록</a>
 
                         <div class="pagingBox">
                             <div class="pagingList">
@@ -208,8 +154,53 @@
                                 <a href="#" class="next">></a>
                             </div>
                         </div>
+
                     </section>
 
                 </div>
             </div>
         </main>
+        <!-- 상품목록 컨텐츠 끝 -->
+    </section>
+
+    <!--내용 끝-->
+    <div class="footer_wrapper" th:fragment="footer">
+        <footer>
+            <div id="version">LotteON ADMINISTRATOR Version 0.0.1</div>
+            <div id="copyright">
+                Copyrightⓒ LotteOn_Team1 All rights reserved.
+            </div>
+        </footer>
+    </div>
+
+</body>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const sidebar = document.querySelectorAll('#admin_sidebar > li > a');
+        sidebar.forEach(link => {
+            const subMenu = link.nextElementSibling;
+
+            // 마우스가 들어왔을 때(submenu 열기)
+            link.addEventListener('mouseenter', function () {
+                subMenu.style.display = 'block';
+            });
+
+            // 마우스가 나갔을 때(submenu 닫기)
+            link.addEventListener('mouseleave', function () {
+                subMenu.style.display = 'none';
+            });
+
+            // 서브 메뉴 자체에 대해서도 마우스가 나갔을 때 닫히지 않도록 처리
+            subMenu.addEventListener('mouseenter', function () {
+                subMenu.style.display = 'block'; // 유지
+            });
+
+            subMenu.addEventListener('mouseleave', function () {
+                subMenu.style.display = 'none';  // 메뉴 닫기
+            });
+        });
+    });
+</script>
+
+</html>
