feat: 상품 컨트롤러 적용 + aside 레이아웃 분리

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -21,6 +21,7 @@
 .header__bot {
   position: relative;
   border-top: 1px solid rgba(255, 0, 0, 0.247);
+  border-bottom: 1px solid rgba(255, 0, 0, 0.247);
   height: 100px;
 }
 
