--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -1,6 +1,3 @@
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorate="~{/layout/productLayout.html}">
-<!--내용 시작-->
 
 <link rel="stylesheet" href="/static/css/reset.css">
 <link rel="stylesheet" href="/static/css/product.css">
@@ -93,7 +90,7 @@
 
 </script>
 
-<section class="section" layout:fragment="content">
+<section class="section" th:fragment="list">
 
 
     <!-- 제목, 페이지 네비게이션 -->
@@ -111,11 +108,11 @@
 
     <ul class="sort">
         <li><a class="sort__link" href="#" onclick="sort('prodSold')"> 판매많은순</a></li>
-        <li><a class="sort__link href=" #" onclick="sort('prodLowPrice')"> 낮은가격순</a></li>
-        <li><a class="sort__link href=" #" onclick="sort('prodHighPrice')"> 높은가격순</a></li>
-        <li><a class="sort__link href=" #" onclick="sort('prodScore')"> 평점높은순</a></li>
-        <li><a class="sort__link href=" #" onclick="sort('prodReview')"> 후기많은순</a></li>
-        <li><a class="sort__link href=" #" onclick="sort('prodRdate')"> 최근등록순</a></li>
+        <li><a class="sort__link" href="#" onclick="sort('prodLowPrice')"> 낮은가격순</a></li>
+        <li><a class="sort__link" href="#" onclick="sort('prodHighPrice')"> 높은가격순</a></li>
+        <li><a class="sort__link" href="#" onclick="sort('prodScore')"> 평점높은순</a></li>
+        <li><a class="sort__link" href="#" onclick="sort('prodReview')"> 후기많은순</a></li>
+        <li><a class="sort__link" href="#" onclick="sort('prodRdate')"> 최근등록순</a></li>
     </ul>
 
 
@@ -228,7 +225,7 @@
 
     <!-- 상품목록 페이지번호 -->
     <div class="paging">
-        <span class="prev" th:if="${productPageResponseDTO.prev}">
+        <span class="prev">
             <a
                 href="#">
                 <&nbsp;이전</a>
@@ -248,12 +245,10 @@
         <span class="paging__num">
             <a href="#" >5</a>
         </span>
-        <span class="next" th:if="${productPageResponseDTO.next}">
+        <span class="next" >
             <a href="#">다음&nbsp;></a>
         </span>
     </div>
 
 </section>
 <!--내용 끝-->
-
-</html>
