--- a/src/main/resources/templates/myPage/content/modal.html
+++ b/src/main/resources/templates/myPage/content/modal.html
@@ -457,7 +457,7 @@
         </section>
     </div>
 </div>
-
+<!-- 상점등록 모달-->
 <div id="sellerinsertmodal" class="modal admin">
     <div class="sellerinsertmodal-content">
         <nav class="adminmodal-nav">
@@ -523,6 +523,7 @@
         </section>
     </div>
 </div>
+<!-- 회원수정 모달-->
 <div id="userchangemodal" class="modal admin">
     <div class="userchangemodal-content">
         <nav class="adminmodal-nav">
