--- a/src/main/resources/templates/myPage/content/ordered.html
+++ b/src/main/resources/templates/myPage/content/ordered.html
@@ -1,7 +1,7 @@
 
 
             <!-- 회원정보 섹션 -->
-            <section th:fragment="order">
+            <section th:fragment="ordered">
                 <a href="#"><img src="/images/image.PNG" alt="패션, 타운 하나로 끝" class="banner"></a>
                 <!-- 810x86 배너 이미지 -->
                 <article class="latest">
@@ -18,11 +18,11 @@
                         </select>
                         <div class="date-wrapper">
                             <div class="start-date-wrapper">
-                                <input type="date" id="startDate" class="start-date"  placeholder="시작 날짜 선택">
+                                시작날짜 : <input type="date" id="startDate" class="start-date" placeholder="시작 날짜 선택">
                             </div>
 
                             <div class="end-date-wrapper">
-                                <input type="date" id="endDate" class="end-date"  placeholder="종료 날짜 선택">
+                                종료날짜 : <input type="date" id="endDate" class="end-date" placeholder="종료 날짜 선택" >
                             </div>
                         </div>
                         <button onclick="searchOrders()">검색</button>
@@ -126,30 +126,5 @@
                       <a href="#" class="next">></a>
                     </div>
                 </div>
-                <script>
-                    document.addEventListener('DOMContentLoaded', function() {
-                        const today = new Date().toISOString().split('T')[0]; // 오늘 날짜
-                        const startDateInput = document.getElementById('startDate');
-                        const endDateInput = document.getElementById('endDate');
 
-                        // 시작 날짜는 오늘 날짜 이전만 선택 가능하게 설정
-                        startDateInput.setAttribute('max', today);
-
-                        startDateInput.addEventListener('change', function() {
-                            const selectedStartDate = new Date(this.value);
-
-                            // 종료 날짜는 시작 날짜 이후부터 3년 내로 설정, 그리고 오늘 날짜를 넘을 수 없음
-                            const maxEndDate = new Date(selectedStartDate);
-                            maxEndDate.setFullYear(maxEndDate.getFullYear() + 3);
-
-                            const formattedMaxEndDate = maxEndDate.toISOString().split('T')[0];
-                            const minEndDate = this.value;
-
-                            // 종료 날짜는 시작 날짜 이후부터 선택 가능하고, 오늘 날짜와 3년 후 날짜 중 더 이른 날짜까지만 선택 가능
-                            endDateInput.setAttribute('min', minEndDate);
-                            endDateInput.setAttribute('max', formattedMaxEndDate < today ? formattedMaxEndDate : today);
-                            endDateInput.removeAttribute('readonly'); // 종료 날짜 필드 활성화
-                        });
-                    });
-                </script>
             </section>
