--- a/src/main/resources/templates/myPage/content/info.html
+++ b/src/main/resources/templates/myPage/content/info.html
@@ -1,5 +1,5 @@
 
-        <section th:fragment="myinfo">
+        <section th:fragment="info">
             <a href="#"><img src="/images/image.PNG" alt="패션, 타운 하나로 끝" class="banner"></a> <!-- 810x86 배너 이미지 -->
     
             <article class="myinfomation">
