--- a/src/main/resources/templates/myPage/content/point.html
+++ b/src/main/resources/templates/myPage/content/point.html
@@ -16,11 +16,11 @@
             </select>
             <div class="date-wrapper">
                 <div class="start-date-wrapper">
-                    <input type="date" id="startDate" class="start-date" placeholder="시작 날짜 선택">
+                    시작날짜 : <input type="date" id="startDate" class="start-date" placeholder="시작 날짜 선택">
                 </div>
 
                 <div class="end-date-wrapper">
-                    <input type="date" id="endDate" class="end-date" placeholder="종료 날짜 선택">
+                    종료날짜 : <input type="date" id="endDate" class="end-date" placeholder="종료 날짜 선택" >
                 </div>
             </div>
             <button onclick="searchOrders()">검색</button>
