--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -47,47 +47,33 @@
             <div class="loginFormWrapper">
                 <div class="login-left">
                     <div class="section_input_loginForm">
-                        <div>
-                            <div class="inputSet login">
+                            <div class="inputSet">
                                 <input name="inId" type="text" placeholder="아이디" id="inId" title="아이디 또는 이메일 입력">
-                            </div>
-
-                            <div class="inputSet login">
-                                <div class="passwordWrap">
-                                    <input id="Password" type="password" placeholder="비밀번호"
+                                <input id="Password" type="password" placeholder="비밀번호"
                                         name="Password" autocomplete="new-password"
                                         title="비밀번호 입력 (8~15자리 영문+숫자+특수문자 조합)">
-
-                                </div>
                             </div>
-                        </div>
                         <button class="loginButtonWithImage" type="button">
                             <span class="btnLogin">로그인</span>
                         </button>
                     </div>
 
-                    <div class="autoLogin">
-                        <div class="checkboxSet">
-                            <input id="checkbox1" type="checkbox" name="checkbox1" checked="checked">
-                            <label for="checkbox1">자동로그인</label>
+                    <div class="userinfoservice">
+                        <div>
+                            <input id="checkbox1" type="checkbox" name="checkbox1" checked="checked">자동로그인
                         </div>
-                        <input id="checkbox11" type="hidden" name="checkbox" value="N">
-                        <div class="btnFindIdPasswordWrap">
+                        <div>
                             <button class="findIdPassword">아이디 찾기</button> |
                             <button class="findIdPassword">비밀번호 찾기</button> |
                             <button class="movejoin">회원가입</button>
                         </div>
                     </div>
 
-                    <div class="signupSpeed lineType">
                         <div class="socialSignupWrap">
-                            <div class="btnLoginGroup">
-                                <button type="button" class="naverLoginBtn">네이버</button>
-                                <button type="button" class="kakaoLoginBtn">카카오</button>
-                                <button type="button" class="googleLoginBtn">구글</button>
-                            </div>
+                            <button type="button" class="naverLoginBtn">네이버</button>
+                            <button type="button" class="kakaoLoginBtn">카카오</button>
+                            <button type="button" class="googleLoginBtn">구글</button>
                         </div>
-                    </div>
 
                 </div>
                 <div class="login-right">
